User and Seller RBAC upgraded